Avoid squished loading spinner

--- a/live-runtime/src/css/live-runtime.css
+++ b/live-runtime/src/css/live-runtime.css
@@ -51,6 +51,10 @@
   border-top-left-radius: 5px;
 }
 
+#exercise-loading-indicator>.spinner-grow {
+  min-width: 1rem;
+}
+
 .exercise-loading-details+.exercise-loading-details::before {
   content: "/ ";
 }
